[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Anime-scenery-girl-and-landscape-620x310.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/SpawnEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Extra/Hateno Village (Day)   Zelda Breath of the Wild Soundtrack.wav" type="AudioStream" id=3]
[ext_resource path="res://Sonido.gd" type="Script" id=4]
[ext_resource path="res://Extra/heyboy-heygirl/heyboy!heygirl!.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/scorelabel.gd" type="Script" id=6]
[ext_resource path="res://Textures/pink-heart-png-12.png" type="Texture" id=7]
[ext_resource path="res://Linea.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 13.3181, 10 )

[node name="Main" type="Node"]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 508.13, 357.132 )
scale = Vector2( 1.66, 2.33 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnEnemy" parent="." index="1" instance=ExtResource( 2 )]

[node name="Audio" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Button" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 892.0
margin_top = 628.0
margin_right = 998.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sonido"
flat = false
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 148.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="VidaLabel" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 945.0
margin_top = 3.0
margin_right = 1003.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "x3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Vida" type="Sprite" parent="." index="6"]

position = Vector2( 910.091, 34.0094 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Linea" type="Area2D" parent="." index="7"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )

[node name="Shape" type="CollisionShape2D" parent="Linea" index="0"]

position = Vector2( 513.613, -18.742 )
scale = Vector2( 38.4854, 1.43419 )
shape = SubResource( 3 )

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]

[connection signal="area_entered" from="Linea" to="Linea" method="_on_Linea_area_entered"]


